Add unit tests for all repositories and fix DoctorRepositoryIntegrationTests
- Implemented Mockito-based unit tests for Doctor, Diagnosis, Medicine, Patient, SickLeave, Specialty, Treatment, and Visit repositories, ensuring full coverage of repository methods with soft delete support.
- Fixed failing integration tests in DoctorRepositoryIntegrationTests by removing sharedDoctor from @BeforeEach, adding entityManager.clear() for proper cleanup, and ensuring correct soft delete behavior.
- Removed H2 dependency and updated test configuration to use Testcontainers with MySQL for integration tests, aligning with production database.
- Reverted application-test.yml to use jdbc:tc:mysql for Testcontainers.